<resources>
    <string name="app_name">WeCanCharge</string>
    <string name="title_charging">Charging</string>
    <string name="title_map">Map</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
