<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_charging">

    <fragment
        android:id="@+id/navigation_charging"
        android:name="com.example.wecanchargeapp.ui.charging.ChargingFragment"
        android:label="@string/title_charging" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.wecanchargeapp.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.wecanchargeapp.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.wecanchargeapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
    </fragment>

    <fragment
        android:id="@+id/navigation_profile_settings"
        android:name="com.example.wecanchargeapp.ui.profile.settings.SettingsActivity"
        android:label="@string/title_settings"
        tools:layout="@layout/activity_settings" />

</navigation>
